--- a/views/admin/dashboard.hbs
+++ b/views/admin/dashboard.hbs
@@ -1,42 +1,12 @@
 <section>
-    <grid>
-        <div col="1/1" id="cards">
-            <card txt="c" onclick="location.href='#'">
-                <h2 mb=8 class="bebas">Dash</h2>
+    <grid txt="c">
+        <div col="1/2" id="cards">
+            <card txt="c" onclick="location.href='/admin/dns-list'">
+                <h2 mb=8 class="bebas">LINK</h2>
                 <p>
-                    Este é o dash
+                    Create LINK
                 </p>
             </card>
         </div>
     </grid>
 </section>
-<style>
-    #cards {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-    #cards card {
-        width: 200px;
-        height: 200px;
-        margin: 10px;
-        display: flex;
-        flex-direction: column;
-        cursor: pointer;
-        justify-content: center;
-    }
-    #cards card p {
-        display: none;
-    }
-    #cards card h2 {
-        margin: 0;
-        padding: 0;
-    }
-    #cards card:hover p {
-        display: block;
-    }
-    #cards card:hover {
-        background: #eee;
-    }
-</style>
