--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,3 +1,3 @@
-<h1>{{message}}</h1>
-<h2>{{error.status}}</h2>
-<pre>{{error.stack}}</pre>
+<h1 txt="c">{{message}}</h1>
+<h2 txt="c">{{error.status}}</h2>
+{{!-- <pre>{{error.stack}}</pre> --}}
