--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,14 +9,14 @@
   {{> nav}}
   <section style="max-width: auto">
     <br>
-    {{#if msg}}
-    <card>
-      <p txt="c" style="background-color: #4cfa5b">{{msg}}</p>
+    {{#if success}}
+    <card style="background-color: #4cfa5b">
+      <p txt="c">{{success}}</p>
     </card>
     {{/if}}
-    {{#if err}}
-    <card>
-      <p txt="c" style="background-color: #f00">{{err}}</p>
+    {{#if error}}
+    <card style="background-color: #f00">
+      <p txt="c">{{error}}</p>
     </card>
     {{/if}}
     <br>
