--- a/views/admin/dns-list.hbs
+++ b/views/admin/dns-list.hbs
@@ -1,4 +1,4 @@
-<h1 class="bebas em4">Lista de Cupons</h1>
+<h1 class="bebas em4">Lista de Links</h1>
 
 <button btn onclick="location.href='/admin/dns/create'">Cadastrar Link</button>
 
