--- a/views/admin/dns-list.hbs
+++ b/views/admin/dns-list.hbs
@@ -1,6 +1,6 @@
 <h1 class="bebas em4">Lista de Links</h1>
 
-<button btn onclick="location.href='/admin/dns/create'">Cadastrar Link</button>
+<button btn onclick="location.href='/admin/dns/create'">Cadastrar Shorten</button>
 
 
 <section txt="c">
